Translate terminal messages, class and method names that were still in Spanish.