@@ -10,31 +10,31 @@ public class Main {
     public static void main(String[] args) throws IOException, InterruptedException {
     	Scanner in = new Scanner(System.in);
     	System.out.println(
-    	    "Ingrese la ruta completa al archivo de entradas " +
-            "(p. ej. /tmp/inputs.txt) y presione Enter:"
+    	    "Type the full path to the inputs file " +
+            "(i. e. /tmp/inputs.txt) and press Enter:"
     	);
-    	String rutaArchivoInputs = in.nextLine();
-    	System.out.println("Ingrese la cantidad de Threads a usar y presione Enter:");
-    	Integer nroThreads = new Integer(in.nextLine());
+    	String inputsFilePath = in.nextLine();
+    	System.out.println("Indicate the number of Threads to use and press Enter:");
+    	Integer numberOfThreads = Integer.valueOf(in.nextLine());
     	in.close();
     	
     	Instant start = Instant.now();
     	
-    	ThreadPool threadPool = new ThreadPool(nroThreads);
-    	SortedList indicesCuadradosPerfectos = new SortedList();
-    	List<String> lineas = Files.readAllLines(Paths.get(rutaArchivoInputs));
-    	Countdown countDown = new Countdown((new Integer(lineas.get(0))));
-    	for (int i = 1; i < lineas.size(); i++) {
-    		Validacion validacion = new Validacion(i, lineas.get(i), indicesCuadradosPerfectos, countDown);
-    		threadPool.agregarParaValidar(validacion);
+    	ThreadPool threadPool = new ThreadPool(numberOfThreads);
+    	SortedList validSquareIndexes = new SortedList();
+    	List<String> lines = Files.readAllLines(Paths.get(inputsFilePath));
+    	Countdown countDown = new Countdown((Integer.valueOf(lines.get(0))));
+    	for (int i = 1; i < lines.size(); i++) {
+    		Validation validation = new Validation(i, lines.get(i), validSquareIndexes, countDown);
+    		threadPool.addTask(validation);
     	}
-    	threadPool.descartarThreads();
+    	threadPool.discardThreads();
     	
     	countDown.zero();
-    	System.out.println("Índices cuadrados latinos válidos: " + indicesCuadradosPerfectos.getListaIndices());
+    	System.out.println("Index of the valid latin squares: " + validSquareIndexes.getListaIndices());
     	
     	Instant end = Instant.now();
     	
-    	System.out.println("Duración de la ejecución: " + Duration.between(start, end).getSeconds() + " segundos");
+    	System.out.println("Runtime: " + Duration.between(start, end).getSeconds() + " seconds");
     }
 }
